2005-01-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3d.dem: Remove deprecated references to "set pm3d solid" and
	"set pm3d transparent".

2005-01-26  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/pgnuplot.c (PostString): Fix transmission of 8-bit
	characters to function taking ints by cast to unsigned char.

2005-01-25  Ethan Merritt  <merritt@u.washington.edu>

	* term/ai.trm (AI_reset) term/corel.trm (COREL_reset) term/epslatex.trm
	(EPSL_init EPSL_text): Remove extraneous % characters in strings output
	by fputs().

2005-01-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (save_command): Remove extraneous c_token++.

2005-01-20  Dietmar Warning  <warning@danalyse.de>

	* src/gnuplot.opt: Add breaders.obj to the list.

2005-01-19  Dietmar Warning  <warning@danalyse.de>

	* src/util.c: Correct the GetUserName call for windows.

2005-01-11  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/tgif.trm: Fix two bugs related to font handling.

2005-01-11  Ethan Merritt  <merritt@u.washington.edu>

	* demo/mousevariables.dem demo/keystroke.dem: Fix incorrect termination
	logic in the keystroke demo.

	* src/graphics.c (boundary): Rather than turning off the key altogether
	if the contents seem to be too big to fit, fall back to something half
	way plausible and also print an warning message. Fixes (or at least
	addresses) bug #1058117.

2005-01-11  Harald Harders  <h.harders@tu-bs.de>

	Apply updated SourceForge patch #1023783
 
	* configure.in: Check for which libpdf version is present; check
	whether <pwd.h> is present.

	* src/util.c src/util.h: New routine (char *) getusername() gets
	user name from environment or from passwd file.

	* term/pdf.trm (PDF_init) term/post.trm (PS_init): Store username
	and other envelope information in the PDF dictionary structure of
	the output file.  New routine PS_escape_string() to ensure that 
	character strings entered in the PDF dictionary are legal strings.
